--- a/src/assets/scss/mobile5.css
+++ b/src/assets/scss/mobile5.css
@@ -445,7 +445,10 @@
     transform: rotate(-45deg);
   }
   .intoAnimation .projects__gray-line {
-    bottom: 43.8571428571vh;
+    bottom: 30.7rem;
+  }
+  .isSelected .projects__button-anchor {
+    left: -20rem;
   }
   .projects-swiper-slide__content {
     left: 1.6rem;
@@ -455,10 +458,7 @@
     width: 25rem;
   }
   .intoAnimation .projects-swiper-slide__content {
-    bottom: 18.5714285714vh;
-  }
-  .intoAnimation .projects-swiper-slide__content {
-    bottom: 38.5714285714vh;
+    bottom: 27rem;
   }
   .projects-swiper-slide__title {
     margin-left: 0;
@@ -513,6 +513,9 @@
     top: 0;
     left: 0;
     transition: 0.3s;
+  }
+  section {
+    min-height: 0;
   }
   .modal-box {
     position: fixed;
@@ -1322,11 +1325,14 @@
   }
   .piter__right {
     display: block;
-    width: 17.3rem;
+    width: 100%;
   }
   .piter__right-text {
     margin-top: 0;
     color: #140E0A;
+  }
+  .main-view {
+    min-height: 100vh;
   }
   .piter__left-img {
     position: relative;
@@ -1345,16 +1351,6 @@
   .piter__middle img {
     width: 100%;
     height: 27.1rem;
-  }
-  .intoAnimation .piter__right {
-    width: 17.3rem;
-    transition: 1s;
-    bottom: 2rem;
-  }
-  .intoAnimation .piter__right {
-    width: 100%;
-    transition: 1s;
-    bottom: -3rem;
   }
   .result__left {
     width: 100%;
@@ -1432,9 +1428,6 @@
   .feedback__img-animation {
     height: 25.1rem;
   }
-  .feedback-form {
-    width: 100%;
-  }
   .feedback-form__title {
     font-size: 1.6rem;
     margin-bottom: 2.4rem;
@@ -1452,10 +1445,17 @@
   .feedback-form .primary-button {
     right: 0.8rem;
   }
+  .prices {
+    min-height: 100vh;
+  }
   .feedback-form {
-    height: 36.8rem;
+    width: 36.1rem;
     position: relative;
     overflow: hidden;
+    margin: 0 auto 4rem;
+  }
+  .contacts-page .contacts-block {
+    margin-top: 0;
     margin-bottom: 4rem;
   }
   .feedback__img-animation {
@@ -1798,7 +1798,6 @@
     width: 100%;
     position: relative;
     overflow: hidden;
-    height: 0;
     transition: 1s;
     z-index: 2;
   }
@@ -1819,21 +1818,6 @@
     bottom: 0;
     z-index: 1;
   }
-  .intoAnimation .project-details__left {
-    height: 50rem;
-    transition: 1s;
-  }
-  .intoAnimation .project-details__middle {
-    height: 42rem;
-    transition: 1s;
-  }
-  .intoAnimation .project-details__middle-animation {
-    height: 42rem;
-  }
-  .project-details__middle img {
-    height: 42rem;
-    width: 100%;
-  }
   .project-details__right-spacer {
     height: 0;
   }
@@ -1843,29 +1827,22 @@
     position: relative;
     overflow: hidden;
   }
-  .intoAnimation .project-details__right-text:first-child {
-    height: 0;
-    transition: 1s;
-  }
   .project-details__right-text:last-child {
     height: 0;
     transition: 1s;
   }
-  .intoAnimation .project-details__right-text:last-child {
-    height: 5.1rem;
-    transition: 1s;
-  }
   .project-description__content {
     width: 36.1rem;
+    padding-top: 4rem;
   }
   .project-description__top {
     display: block;
-    height: auto;
+    height: 22rem;
   }
   .project-description__top-item {
     width: 21rem;
   }
-  .intoAnimation .project-description__top-item {
+  .project-description__top-item {
     height: 8.9rem;
   }
   .project-description__top-right {
