--- a/src/assets/scss/mobile5.scss
+++ b/src/assets/scss/mobile5.scss
@@ -525,7 +525,10 @@ $vh: calc(100vh/700);
   }
 
   .intoAnimation .projects__gray-line {
-    bottom: $vh * 307;
+    bottom: 30.7rem;
+  }
+  .isSelected .projects__button-anchor {
+    left: -20rem;
   }
 
   .projects-swiper-slide__content {
@@ -537,10 +540,7 @@ $vh: calc(100vh/700);
   }
 
   .intoAnimation .projects-swiper-slide__content {
-    bottom: $vh * 130;
-  }
-  .intoAnimation .projects-swiper-slide__content {
-    bottom: $vh * 270;
+    bottom: 27rem;
   }
 
   .projects-swiper-slide__title {
@@ -600,6 +600,10 @@ $vh: calc(100vh/700);
     top: 0;
     left: 0;
     transition: 0.3s;
+  }
+
+  section {
+    min-height: 0;
   }
 
   .modal-box {
@@ -1444,11 +1448,14 @@ $vh: calc(100vh/700);
 
   .piter__right {
     display: block;
-    width: 17.3rem;
+    width: 100%;
   }
   .piter__right-text {
     margin-top: 0;
     color: $primary-dark-color;
+  }
+  .main-view {
+    min-height: 100vh;
   }
   .piter__left-img {
     position: relative;
@@ -1467,16 +1474,6 @@ $vh: calc(100vh/700);
       width: 100%;
       height: 27.1rem;
     }
-  }
-  .intoAnimation .piter__right {
-    width: 17.3rem;
-    transition: 1s;
-    bottom: 2rem;
-  }
-  .intoAnimation .piter__right {
-    width: 100%;
-    transition: 1s;
-    bottom: -3rem;
   }
   .result__left {
     width: 100%;
@@ -1554,9 +1551,6 @@ $vh: calc(100vh/700);
   .feedback__img-animation {
     height: 25.1rem;
   }
-  .feedback-form {
-    width: 100%;
-  }
   .feedback-form__title {
     font-size: 1.6rem;
     margin-bottom: 2.4rem;
@@ -1574,10 +1568,17 @@ $vh: calc(100vh/700);
   .feedback-form .primary-button {
     right: 0.8rem;
   }
+  .prices {
+    min-height: 100vh;
+  }
   .feedback-form {
-    height: 36.8rem;
+    width: 36.1rem;
     position: relative;
     overflow: hidden;
+    margin: 0 auto 4rem;
+  }
+  .contacts-page .contacts-block {
+    margin-top: 0;
     margin-bottom: 4rem;
   }
   .feedback__img-animation {
@@ -1928,7 +1929,6 @@ $vh: calc(100vh/700);
     width: 100%;
     position: relative;
     overflow: hidden;
-    height: 0;
     transition: 1s;
     z-index: 2;
   }
@@ -1950,22 +1950,6 @@ $vh: calc(100vh/700);
     bottom: 0;
     z-index: 1;
   }
-
-  .intoAnimation .project-details__left {
-    height: 50rem;
-    transition: 1s;
-  }
-  .intoAnimation .project-details__middle {
-    height: 42rem;
-    transition: 1s;
-  }
-  .intoAnimation .project-details__middle-animation {
-    height: 42rem;
-  }
-  .project-details__middle img {
-    height: 42rem;
-    width: 100%;
-  }
   .project-details__right-spacer {
     height: 0;
   }
@@ -1975,29 +1959,22 @@ $vh: calc(100vh/700);
     position: relative;
     overflow: hidden;
   }
-  .intoAnimation .project-details__right-text:first-child {
-    height: 0;
-    transition: 1s;
-  }
   .project-details__right-text:last-child {
     height: 0;
     transition: 1s;
   }
-  .intoAnimation .project-details__right-text:last-child {
-    height: 5.1rem;
-    transition: 1s;
-  }
   .project-description__content {
     width: 36.1rem;
+    padding-top: 4rem;
   }
   .project-description__top {
     display: block;
-    height: auto;
+    height: 22rem;
   }
   .project-description__top-item {
     width: 21rem;
   }
-  .intoAnimation .project-description__top-item {
+  .project-description__top-item {
     height: 8.9rem;
   }
   .project-description__top-right {
